--- a/services/catalog-service/package.json
+++ b/services/catalog-service/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "catalog-service",
+  "name": "bookbay-catalog-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Book catalog service with GraphQL for BookBay",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/app.js",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "build": "tsc",
+    "clean": "rm -rf dist"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.13.0",
+    "apollo-server-express": "^3.12.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "graphql": "^16.11.0",
-    "mongoose": "^8.18.1",
-    "redis": "^5.8.2"
+    "graphql": "^16.8.1",
+    "mongoose": "^8.0.3",
+    "redis": "^4.6.1"
   },
-  "description": "",
   "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.3.2",
-    "@types/redis": "^4.0.10",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "@types/node": "^20.10.0",
+    "@types/redis": "^4.0.11",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   }
 }
